0.63 (01.13.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the generate_manager_class_name() method to the loader.
    * Enabled the with_map_records Manager argument to work in the
      manager_args list for relationships.

0.62 (01.06.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a make_modules() bug that caused incorrect init_db() methods
      to be created in some cases.  (Reported by Sean Davis)

0.61 (01.05.2006) - John Siracusa <siracusa@mindspring.com>

    * Added "select" parameter to the Manager which accetps an explicit
      list of columns to be selected.
    * It's now possible to filter based on columns that are not selected
      as part of a Manager query.
    * Extra parameters can now be passed to the method created by
      make_manager_method_from_sql()
    * Fixed several bitfield column accessor method bugs.  (Reported by 
      Svilen Ivanov)
    * The loader's make_modules() method now correctly creates *.pm files
      for auto-generated base classes.  (Reported by Sean Davis)

0.601 (01.01.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed some incorrect deep join tests.
    * Reduced the number of Postgres database connections used in the test
      suite in order to avoid hitting Postgres's default connection limit.
    * Fixed the DBI benchmark tests broken by the last release.
    * Uncommented some sections of the benchmark script that were
      accidentally left commented-out in the last release.

0.60 (12.31.2005) - John Siracusa <siracusa@mindspring.com>

    * Added arbitrary-depth auto-joins to the Manager using a "dot-chained"
      syntax (e.g., vendor.regions.code)
    * Added make_modules() method to the loader.
    * Added pre_init_hook() method to metadata objects and the loader.
    * Added overflow attribute to control the behavior when a scalar, 
      character, or varchar column value is too long.  Possible values
      are "fatal" (the default), "truncate", and "warn".